--- a/StorageSample/Api/Api.csproj
+++ b/StorageSample/Api/Api.csproj
@@ -106,6 +106,11 @@
     <Compile Include="Controllers\QuotaController.cs" />
     <Compile Include="Controllers\SubscriptionsController.cs" />
     <Compile Include="Controllers\UsageController.cs" />
+    <Compile Include="DataProvider\IContainerProvider.cs" />
+    <Compile Include="DataProvider\ILocationProvider.cs" />
+    <Compile Include="DataProvider\DataProviderFactory.cs" />
+    <Compile Include="DataProvider\InMemoryContainerProvider.cs" />
+    <Compile Include="DataProvider\InMemoryLocationProvider.cs" />
     <Compile Include="ErrorMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
