Enabling drill down based on type to sub navs. Added based on question on forum

--- a/StorageSample/Api/Api.csproj
+++ b/StorageSample/Api/Api.csproj
@@ -101,6 +101,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminSettingsController.cs" />
+    <Compile Include="Controllers\StorageFilesController.cs" />
     <Compile Include="Controllers\ContainersController.cs" />
     <Compile Include="Controllers\LocationsController.cs" />
     <Compile Include="Controllers\QuotaController.cs" />
